# Legend-Of-Heoroes

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bazel-Legend  bazel-Legend-Of-Heroes  bazel-bin  bazel-out  bazel-testlogs  run.sh
Tests/: makefile  test.csv  test_csv  test_csv.cpp
assets/HitBoxTiles/: Hitbox.csv  Hitbox.tmx  tiles.tsx
assets/Map/: Map.lua  Map_Group 1_Back.csv  Map_Group 1_Front.csv  Middle.csv  Test.csv  TestMap.tmx
assets/Map/assets/: MainMenu.tmx  Map.tmx  Test.tmx  grass1.tsx  tiles.tsx
header/: BUILD  Entity.h  Game.h  Gui.h  Init.h  Input.h  KeyboardHandler.h  Menu.h  Object.h  Player.h  Timer.h
imgui/: BUILD  imgui_sdl.cpp  main.cpp
main/: BUILD  main.cpp
settings/: config.json
source/: BUILD  Entity.cpp  Game.cpp  Gui.cpp  Init.cpp  Input.cpp  KeyboardHandler.cpp  Menu.cpp  Object.cpp  Player.cpp  Timer.cpp
